--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "cli": "^1.0.1",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "flowbite": "^1.6.5",
